포인트 사용시 세션 동기화, 결제완료화면 수정